===================================
gnome-commander 1.2.8.10
---------------

Bug fixes:
 * Fixed problem #448941 (numeric keypad arrows don't work in the main window)
 * Fixed problem with toggling path/basename/filename selections in copy/move dialogs
 * Updated translations: de


===================================
gnome-commander 1.2.8.9
---------------

Bug fixes:
 * Fixed problem #352024 (F10 key doesn't work)
 * Fixed problem #631243 (advrename $c(width) regression)

New features:
 * Support for shell-style wildcards in quick search


===================================
gnome-commander 1.2.8.8
---------------

Bug fixes:
 * Fixed problem #610764 (menu item won't stay checked)
 * Fixed problem #626469 (add support for other su-like programs: xdg-su, gnomesu)
 * Fixed problem with broken Spanish translation


===================================
gnome-commander 1.2.8.7
---------------

Bug fixes:
 * Fixed problem #540438 (no GUI message if meld cannot be executed)
 * Fixed problem #616367 ("File not found" dialog after startup)
 * Fixed problem #620650 (buffer overflow in load_fav_apps())
 * Fixed problem #622456 (do not build plugins as shared library objects)
 * Fixed problem with editing options for favourite apps and devices


===================================
gnome-commander 1.2.8.6
---------------

Bug fixes:
 * Fixed problem #602795 (file content search)
 * Fixed problem #609912 (build error with --as-needed)
 * Fixed problem #612685 (crashes when double-clicking on a bookmark)
 * Fixed problem #616891 (build error on RHEL 5.5)

New features:
 * New translations: ko


===================================
gnome-commander 1.2.8.5
---------------

Bug fixes:
 * Fixed problem #604558 (cursor lost/placed in wrong position)
 * Fixed problem #604904 (build error on OpenSolaris)
 * Fixed problem #609342 (do not show mtime for '..')
 * Fixed problem with editing connections to Windows network
 * Fixed problem with nonexistent user actions

