@@ -6071,6 +6071,9 @@
                             <para>Fixed problem #448941 (numeric keypad arrows don't work in the main window)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem #637501 (advrename: metatag popup menu shows wrong items)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem with toggling path/basename/filename selections in copy/move dialogs</para>
                         </listitem>
                         <listitem>
